# hpos-service-crates

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  flake.nix  holochain_version.nix  rust-toolchain  version-manager.json
.github/: dependabot.yml
.github/workflows/: rust.yml
crates/configure-holochain/: Cargo.toml
crates/configure-holochain/src/: hpos_holochain_api.rs  jurisdictions.rs  lib.rs
crates/configure-holochain/tests/: config.yaml  integration.rs
crates/configure_holochain/: Cargo.toml
crates/configure_holochain/src/: lib.rs  membrane_proof.rs  utils.rs  websocket.rs
crates/configure_holochain/tests/: integration.rs
crates/core_app_cli/: Cargo.toml  README.md
crates/core_app_cli/src/: main.rs
crates/core_app_cli/src/actions/: enable_happ_for_host.rs  get_agents_jurisdiction.rs  get_all_happs_by.rs  get_happ_details.rs  get_happ_hosts.rs  get_happ_pref_for_host.rs  get_happ_pref_hash_for_host.rs  get_specific_happ_prefs.rs  ledger.rs  list_all_happs.rs  list_all_my_happs.rs  list_all_tx.rs  mod.rs  pay_invoices.rs  profile.rs  register_happ.rs  set_happ_prefs.rs  summary.rs
crates/holo_happ_manager/: Cargo.toml  README.md
crates/holo_happ_manager/src/: get_my_apps.rs  hha.rs  hha_type.rs  lib.rs  main.rs  publish.rs
crates/holo_happ_manager/tests/: config.yaml  holo-published-happs.json  integration.rs  long.rs
crates/holochain_env_setup/: Cargo.toml  README.md
crates/holochain_env_setup/config/: hp-primary-bzywj.json
crates/holochain_env_setup/src/: environment.rs  holochain.rs  lair.rs  lib.rs  storage_helpers.rs
crates/holofuel_cli/: Cargo.toml  README.md
crates/holofuel_cli/src/: main.rs
crates/holofuel_cli/src/actions/: actionable.rs  completed.rs  ledger.rs  mod.rs  pending.rs  profile.rs  reserve.rs  summary.rs
crates/holofuel_init/: Cargo.toml  README.md
crates/holofuel_init/src/: main.rs  reserve_init.rs
crates/hpos-configure-holochain/: Cargo.toml
crates/hpos-configure-holochain/src/: utils.rs  websocket.rs
crates/hpos_connect_hc/: Cargo.toml  README.md
crates/hpos_connect_hc/src/: admin_ws.rs  app_connection.rs  app_ws.rs  chc.rs  core_app_agent.rs  error_types.rs  hf_agent.rs  hha.rs  hha_agent.rs  hha_types.rs  holo_config.rs  holofuel_types.rs  host_keys.rs  hpos_agent.rs  hpos_membrane_proof.rs  lib.rs  sl_utils.rs  utils.rs
crates/hpos_connect_hc/test/: reserve_details.json
crates/taskgroup_manager/: Cargo.toml
crates/taskgroup_manager/src/: kill_on_drop.rs  lib.rs  task_group_wrappers.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: holochain.rs  lair.rs
nix/: sources.json
src/: agent.rs  config.rs  entries.rs  lib.rs  main.rs  membrane_proof.rs  utils.rs  websocket.rs
src/websocket/: membrane_proof.rs
test/: config.yaml  holochain-config.yaml  mem-proof  membrane-proofs.yaml  test.sh
tests/: integration.rs  test.rs
tests/config/: config.yaml  holochain-config.yaml  hp-primary-4817u.json  hp-primary-bzywj.json
tests/setup/: holochain.rs  kill_on_drop.rs  lair.rs  mod.rs
