[workspace]

members = [
  "crates/configure-holochain",
  "crates/hpos_connect_hc",
  "crates/holo_happ_manager",
  "crates/core_app_cli",
  "crates/holofuel_cli",
  "crates/holofuel_init",
  "crates/taskgroup_manager",
  "crates/holochain_env_setup",
]

[workspace.dependencies]
hpos-config-core = { git = "https://github.com/Holo-Host/hpos-config", rev = "c17067b6a4214f9646316fa681651b73c72bf7e1" }
hpos-config-seed-bundle-explorer ={ git = "https://github.com/Holo-Host/hpos-config", rev = "c17067b6a4214f9646316fa681651b73c72bf7e1" }
ed25519-dalek = "2.1.1"
holochain_keystore = "0.4.0-dev.11"
holochain_types = { version = "0.4.0-dev.11", features = ["chc"] }
holochain_conductor_api = "0.4.0-dev.11"
lair_keystore_api = "0.4.5"
holochain_websocket = "0.4.0-dev.11"
holofuel_types = "0.5.11"
sodoken = "0.0.11"
serde = { version = "1.0", features = ["derive", "rc"] } # { version = "1.0.193", features = ["derive"] }
rmp-serde = "1.1.1"
mr_bundle = { version = "0.4.0-dev.4" }
reqwest = { version = "0.12.4", features = ["json"]}

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
