[workspace]
resolver = "2"

members = [
  "crates/configure-holochain",
  "crates/hpos_connect_hc",
  "crates/holo_happ_manager",
  "crates/core_app_cli",
  "crates/holofuel_cli",
  "crates/holofuel_init",
  "crates/taskgroup_manager",
  "crates/holochain_env_setup",
]

[workspace.dependencies]
hpos-config-core = { git = "https://github.com/Holo-Host/hpos-config", rev = "77d740c83a02e322e670e360eb450076b593b328" }
hpos-config-seed-bundle-explorer ={ git = "https://github.com/Holo-Host/hpos-config", rev = "77d740c83a02e322e670e360eb450076b593b328" }
ed25519-dalek = {version = "2.1.1", features = ["serde"]}
holochain_keystore = "0.4.0-dev.18"
holochain_types = { version = "0.4.0-dev.20", features = ["chc"] }
holochain_conductor_api = { version = "0.4.0-dev.20", features = ["chc"] }
lair_keystore_api = "0.5.0"
holochain_websocket = "0.4.0-dev.20"
holofuel_types = "0.5.13"
sodoken = "0.0.11"
serde = { version = "1.0", features = ["derive", "rc"] } 
rmp-serde = "1.3.0"
mr_bundle = { version = "0.4.0-dev.7" }
reqwest = { version = "0.12.4", features = ["json"]}

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
