[package]
name = "configure-holochain"
version = "0.5.2"
authors = ["Oleksii Filonenko <oleksii.filonenko@holo.host>", "zo-el <joelulahanna@gmaail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.2"
url = "2.2"
holo_happ_manager = { version = "0.1.0", path = "../holo_happ_manager" }
hpos_hc_connect = { path = "../hpos_connect_hc" }

[dependencies.hpos-config-core]
git = "https://github.com/Holo-Host/hpos-config"
rev = "bfaced6044ae570bf20d4528fa9aaafcc43ddeec"

[dev-dependencies]
test-case = "2.2.2"
serial_test = { version = "1.0.0", features = ["async"] }
holochain_env_setup = { path = "../holochain_env_setup" }
