[package]
name = "configure-holochain"
version = "0.5.2"
authors = ["Oleksii Filonenko <oleksii.filonenko@holo.host>", "zo-el <joelulahanna@gmaail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
url = "2.2"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.2"
hpos_hc_connect = { path = "../hpos_connect_hc" }
holo_happ_manager = { version = "0.1.0", path = "../holo_happ_manager" }
serde = { workspace = true }
reqwest = { workspace = true }
hpos-config-core = { workspace = true }
holochain_types = { workspace = true }
holochain_conductor_api = { workspace = true }

[dev-dependencies]
test-case = "2.2.2"
serial_test = { version = "1.0.0", features = ["async"] }
holochain_env_setup = { path = "../holochain_env_setup" }
dotenv = "0.15.0"
env_logger = "0.10.0"
