[package]
name = "core_app_cli"
version = "0.1.1"
edition = "2021"
authors = ["zo-el <joelulahanna@gmail.com>"]

[dependencies]
tokio = { version = "1.36.0", features = [ "full" ] }
anyhow = "1.0"
structopt = "0.3.0"
serde = { workspace = true }
rmp-serde = { workspace = true }
holochain_types = { workspace = true }
holofuel_types = { workspace = true }
hpos_hc_connect = { path = "../hpos_connect_hc" }
