[package]
name = "holo_happ_manager"
version = "0.1.0"
authors = ["zo-el <joelulahanna@gmaail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
hpos_hc_connect = { version = "0.1.0", path = "../hpos_connect_hc" }

holochain_types = {version = "0.2.2", features = ["chc"]}
holochain_conductor_api = { version = "0.2.2", features = ["chc"]}
holochain_keystore = { version = "0.2.2" }
getrandom = "0.2.1"
serde = "1.0"
serde_json = "1.0.96"
sodoken = "0.0.9"
rmp-serde = "1.1.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio = "1.28.2"
url2 = "0.0.6"
hpos-config-core = { git = "https://github.com/Holo-Host/hpos-config", rev = "bfaced6044ae570bf20d4528fa9aaafcc43ddeec" }

[dev-dependencies]
configure-holochain = { path = "../configure-holochain"}
serial_test = { version = "0.9.0", features = ["async"] }
holochain_env_setup = { path = "../holochain_env_setup" }

