[package]
name = "holo_happ_manager"
version = "0.1.0"
authors = ["zo-el <joelulahanna@gmaail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
hpos_hc_connect = { version = "0.1.0", path = "../hpos_connect_hc" }

holochain_types = { workspace = true }
holochain_conductor_api = { workspace = true }
holochain_keystore = { workspace = true }
getrandom = "0.2.1"
serde = { workspace = true }
serde_json = "1.0.96"
sodoken = { workspace = true }
rmp-serde = { workspace = true }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio = "1.28.2"
url2 = "0.0.6"
hpos-config-core = { workspace = true }
holofuel_types = { workspace = true }

[dev-dependencies]
configure-holochain = { path = "../configure-holochain"}
serial_test = { version = "0.9.0", features = ["async"] }
holochain_env_setup = { path = "../holochain_env_setup" }

