[package]
name = "holochain_env_setup"
version = "0.1.1"
authors = ["Timo <timo@holo.host>", "Lisa <lisa@holo.host>", "zo-el <joelulahanna@gmaail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
one_err = "0.0.8"
url = "2.2"
log = "0.4.17"
holochain_keystore = { workspace = true }
lair_keystore_api = { workspace = true }
lazy_static = "1"
isahc = "1.7.2"
snafu = "0.7.4"
serde = { workspace = true }
serde_yaml = "0.9"
dotenv = "0.15.0"
tempfile = "3.1"
sodoken = { workspace = true }
reqwest = { workspace = true }
tracing = { version = "0.1", features = ["attributes"] }
taskgroup_manager = { path = "../taskgroup_manager" }
