[package]
name = "hf"
version = "0.1.1"
edition = "2021"
authors = ["zo-el <joelulahanna@gmail.com>"]

[dependencies]
anyhow = "1.0"
holochain_types = "0.2.4-rc.0"
hpos_hc_connect = { path = "../hpos_connect_hc" }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.0"
tokio = { version = "1.11", features = [ "full" ] }
rmp-serde = "1.1.1"
