[package]
name = "hf"
version = "0.1.1"
edition = "2021"
authors = ["zo-el <joelulahanna@gmail.com>"]

[dependencies]
anyhow = "1.0"
holochain_types = { workspace = true }
hpos_hc_connect = { path = "../hpos_connect_hc" }
serde = { workspace = true }
structopt = "0.3.0"
tokio = { version = "1.11", features = [ "full" ] }
rmp-serde = "1.1.1"
