[package]
name = "holofuel_init"
version = "0.1.0"
edition = "2021"
authors = ["zo-el <joelulahanna@gmail.com>"]

[dependencies]
anyhow = "1.0"
holochain_types = "0.2.6"
hpos_hc_connect = { path = "../hpos_connect_hc" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.2"
tokio = { version = "1.11", features = [ "full" ] }
rmp-serde = "1.1.1"
