[package]
name = "holofuel_init"
version = "0.1.0"
edition = "2021"
authors = ["zo-el <joelulahanna@gmail.com>"]

[dependencies]
anyhow = "1.0"
holochain_types = { workspace = true }
hpos_hc_connect = { path = "../hpos_connect_hc" }
serde = { workspace = true }
tracing = "0.1.37"
tracing-subscriber = "0.2"
tokio = { version = "1.36.0", features = [ "full" ] }
rmp-serde = { workspace = true }
