[package]
name = "hpos_hc_connect"
version = "0.1.0"
authors = ["zo-el <joelulahanna@gmaail.com>"]
edition = "2021"

[dependencies]
again = "0.1"
anyhow = "1.0"
base64 = "0.13.0"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
lazy_static = "1"
serde_json = "1.0.60"
serde_yaml = "0.9.21"
structopt = "0.3.26"
reqwest = { version = "0.11", features = ["json"]}
tracing = "0.1.37"
url = "2.4.0"
isahc = "1.7.2"
tempfile = "3.1"
thiserror = "1.0"
serde = "1.0"
holochain_types = {version = "0.2.2", features = ["chc"]}
holochain_conductor_api = { version = "0.2.2", features = ["chc"]}
holochain_websocket = { version = "0.2.2"}
mr_bundle = { version = "0.2.2" }
hpos-config-core = { git = "https://github.com/Holo-Host/hpos-config", rev = "bfaced6044ae570bf20d4528fa9aaafcc43ddeec" }
hpos-config-seed-bundle-explorer ={ git = "https://github.com/Holo-Host/hpos-config", rev = "bfaced6044ae570bf20d4528fa9aaafcc43ddeec" }
getrandom = "0.2.7"
holochain_keystore = "0.2.2"
holochain_client = "0.4.2"
sodoken = "0.0.9"
url2 = "0.0.6"
lair_keystore_api = "0.3.0"