[package]
name = "hpos_hc_connect"
version = "0.1.0"
authors = ["zo-el <joelulahanna@gmaail.com>"]
edition = "2021"

[dependencies]
again = "0.1"
anyhow = "1.0"
base64 = "0.13.0"
ed25519-dalek = { workspace = true }
lazy_static = "1"
serde_json = "1.0.60"
serde_yaml = "0.9.21"
structopt = "0.3.26"
reqwest = { workspace = true }
tracing = "0.1.37"
url = "2.4.0"
isahc = "1.7.2"
tempfile = "3.1"
thiserror = "1.0"
serde = { workspace = true }
holochain_types = { workspace = true }
holochain_conductor_api = { workspace = true }
holochain_websocket = { workspace = true }
mr_bundle = { workspace = true }
hpos-config-core = { workspace = true }
hpos-config-seed-bundle-explorer = { workspace = true }
lair_keystore_api = { workspace = true }
getrandom = "0.2.7"
holochain_keystore = { workspace = true }
sodoken = { workspace = true }
url2 = "0.0.6"
holofuel_types = { workspace = true }
