[package]
name = "test_utils"
version = "0.1.0"
authors = ["zo-el <joelulahanna@gmaail.com>"]
edition = "2021"

[dependencies]
chrono = "0.4.22"
lair_keystore_api = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.11"
snafu = "0.7.1"

[target.'cfg(unix)'.dependencies]
nix = "0.27.1"
